--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,12 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0-rc02'
     implementation 'com.android.support:recyclerview-v7:28.0.0-rc02'
 
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
+    implementation 'com.google.firebase:firebase-firestore:11.8.0'
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
+    implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
