--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sahilahmadansari.e_celliitm">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_app_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_app_logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".MainActivity">
+        <activity android:name=".LogIn.LogIn">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Events.EventsMain"></activity>
-        <activity android:name=".EUpdates.EUpdatesMain"></activity>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".Agenda.AgendaMain"/>
+        <activity android:name=".Sponsors.SponsorsMain"/>
+        <activity android:name=".People.PeopleMain"/>
+        <activity android:name=".People.AttendeeActivity"/>
+        <activity android:name=".Messaging.MessagingMain"/>
 
         <meta-data
             android:name="preloaded_fonts"
